// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A11y class pass through on labelClassName should hide the label when a11yHide is passed as a label class 1`] = `
<Fragment>
  <FieldLabel
    className="visibility--a11yHide"
    htmlFor="testSelect"
  >
    Test select
  </FieldLabel>
  <Select
    id="testSelect"
    name="testSelect"
    requiredText="yo check it"
  >
    <option
      value="1"
    >
      One
    </option>
    ,
    <option
      value="2"
    >
      Two
    </option>
    ,
    <option
      value="3"
    >
      Three
    </option>
    ,
    <option
      disabled={true}
      value="4"
    >
      Four
    </option>
    ,
  </Select>
</Fragment>
`;

exports[`A11y class pass through on labelClassName should only pass the a11y class 1`] = `
<Fragment>
  <FieldLabel
    className="visibility--a11yHide"
    htmlFor="testSelect"
  >
    Test select
  </FieldLabel>
  <Select
    id="testSelect"
    name="testSelect"
    requiredText="yo check it"
  >
    <option
      value="1"
    >
      One
    </option>
    ,
    <option
      value="2"
    >
      Two
    </option>
    ,
    <option
      value="3"
    >
      Three
    </option>
    ,
    <option
      disabled={true}
      value="4"
    >
      Four
    </option>
    ,
  </Select>
</Fragment>
`;

exports[`SelectInput basic renders into the DOM 1`] = `
<Fragment>
  <FieldLabel
    className=""
    htmlFor="testSelect"
  >
    Test select
  </FieldLabel>
  <Select
    id="testSelect"
    name="testSelect"
    requiredText="yo check it"
  >
    <option
      value="1"
    >
      One
    </option>
    ,
    <option
      value="2"
    >
      Two
    </option>
    ,
    <option
      value="3"
    >
      Three
    </option>
    ,
    <option
      disabled={true}
      value="4"
    >
      Four
    </option>
    ,
  </Select>
</Fragment>
`;
